# apply-retention-policy

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .nitpick.toml  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  lint.bzl  lint.sh  main.go  platforms.bzl  release.sh  repositories.bzl
.cursor/rules/: always_offer_run_commands.mdc  use-bazel.mdc
.github/: renovate.json
.github/workflows/: ci.yml  pre-commit-update.yml  release.yml
cmd/: BUILD.bazel  prune.go  prune_test.go  root.go
cmd/apply-retention-policy/: BUILD.bazel  prune.go  root.go
configs/: example.yaml
internal/config/: BUILD.bazel  config.go  config_test.go
internal/consts/: BUILD.bazel  consts.go
internal/file/: BUILD.bazel  manager.go  manager_test.go
internal/retention/: BUILD.bazel  policy.go  policy_test.go
pkg/files/: BUILD.bazel  files.go  files_darwin.go  files_linux.go  files_windows.go
pkg/log/: BUILD.bazel  logger.go
pkg/logger/: BUILD.bazel  logger.go
pkg/logging/: BUILD.bazel  logger.go
pkg/must/: BUILD.bazel  must.go
pkg/util/: BUILD.bazel  files.go  files_darwin.go  files_linux.go  files_unix.go  files_windows.go  must.go
tools/: BUILD.bazel  package.bzl  platforms.bzl
