# The MIT License (MIT)
#
# Copyright © 2025 linuxdaemon <linuxdaemon.irc@gmail.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.

load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools:lint.bzl", "buildifier_config", "golangci_lint_config")
load("//tools:platforms.bzl", "platforms")
load("//tools:package.bzl", "go_release_package")

# gazelle:prefix github.com/TotallyNotRobots/apply-retention-policy
gazelle(name = "gazelle")

# gazelle:lang go
platforms()

# Configure linters
golangci_lint_config()

buildifier_config()

go_library(
    name = "apply-retention-policy_lib",
    srcs = ["main.go"],
    importpath = "github.com/TotallyNotRobots/apply-retention-policy",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "apply-retention-policy",
    embed = [":apply-retention-policy_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "binary_tar",
    srcs = [":apply-retention-policy"],
    mode = "0o755",
    package_dir = "/usr/local/bin",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

# Linux-specific container image targets
oci_image(
    name = "image_linux",
    base = "@distroless_base",
    entrypoint = ["/usr/local/bin/apply-retention-policy"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    tars = [":binary_tar"],
)

oci_image_index(
    name = "image_multiarch",
    images = [
        ":image_linux",
    ],
    platforms = [
        ":linux_amd64_platform",
        ":linux_arm64_platform",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

# Push target for the container image
oci_push(
    name = "push",
    image = ":image_multiarch",
    repository = "ghcr.io/totallynotrobots/apply-retention-policy",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

go_release_package(
    name = "apply-retention-policy-linux-amd64",
    cpu = "amd64",
    os = "linux",
    target = ":apply-retention-policy",
)

go_release_package(
    name = "apply-retention-policy-linux-arm64",
    cpu = "arm64",
    os = "linux",
    target = ":apply-retention-policy",
)

go_release_package(
    name = "apply-retention-policy-darwin-amd64",
    cpu = "amd64",
    os = "darwin",
    target = ":apply-retention-policy",
)

go_release_package(
    name = "apply-retention-policy-darwin-arm64",
    cpu = "arm64",
    os = "darwin",
    target = ":apply-retention-policy",
)

go_release_package(
    name = "apply-retention-policy-windows-amd64",
    cpu = "amd64",
    os = "windows",
    target = ":apply-retention-policy",
)

go_release_package(
    name = "apply-retention-policy-windows-arm64",
    cpu = "arm64",
    os = "windows",
    target = ":apply-retention-policy",
)

filegroup(
    name = "release_files",
    srcs = [
        ":apply-retention-policy-linux-amd64.tar.gz",
        ":apply-retention-policy-linux-arm64.tar.gz",
        ":apply-retention-policy-darwin-amd64.tar.gz",
        ":apply-retention-policy-darwin-arm64.tar.gz",
        ":apply-retention-policy-windows-amd64.zip",
        ":apply-retention-policy-windows-arm64.zip",
    ],
)
