# The MIT License (MIT)
#
# Copyright © 2025 linuxdaemon <linuxdaemon.irc@gmail.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

"""Bazel module for the apply-retention-policy tool."""

module(name = "apply-retention-policy")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "golangci_lint_linux_amd64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "7048bc6b25c9515ed092c83f9fa8709ca97937ead52d9ff317a143299ee97a50",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.8.0/golangci-lint-2.8.0-linux-amd64.tar.gz"],
)

http_archive(
    name = "golangci_lint_linux_arm64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "2a58388db8af5ab9330791cea0ebdd4100723cd05ad7185d92febaaee272ec9a",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.8.0/golangci-lint-2.8.0-linux-arm64.tar.gz"],
)

http_archive(
    name = "golangci_lint_darwin_amd64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "164c72806d0e31ab19da4f08fff748a3fdc57e241851279b666c945ed9b91830",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.8.0/golangci-lint-2.8.0-darwin-amd64.tar.gz"],
)

http_archive(
    name = "golangci_lint_darwin_arm64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "6f8979a83117e0607d4b85ff486382ef0404440bbf54f0e6f003ceab6ccf641e",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.8.0/golangci-lint-2.8.0-darwin-arm64.tar.gz"],
)

http_archive(
    name = "golangci_lint_windows_amd64",
    build_file_content = """
exports_files(["golangci-lint.exe"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint.exe golangci-lint.exe"],
    sha256 = "22428168a9406f79853bf9a198b66e88ded9faa57cf85e5d225361f457f33513",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.8.0/golangci-lint-2.8.0-windows-amd64.zip"],
)

http_archive(
    name = "golangci_lint_windows_arm64",
    build_file_content = """
exports_files(["golangci-lint.exe"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint.exe golangci-lint.exe"],
    sha256 = "380e8552bce26cb255a8fd21c0b57fe9241b2ab42e5674d30a84e36130b9c988",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.8.0/golangci-lint-2.8.0-windows-arm64.zip"],
)

# Register Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# Register Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_spf13_cobra", "com_github_spf13_viper", "com_github_stretchr_testify", "org_golang_x_sys", "org_uber_go_zap")

# Register distroless images and make them available
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:f5a3067027c2b322cd71b844f3d84ad3deada45ceb8a30f301260a602455070e",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

zstd = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
zstd.zstd()
use_repo(zstd, "zstd_toolchains")

register_toolchains("@zstd_toolchains//:all")
