# The MIT License (MIT)
#
# Copyright © 2025 linuxdaemon <linuxdaemon.irc@gmail.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

"""Bazel module for the apply-retention-policy tool."""

module(name = "apply-retention-policy")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "golangci_lint_linux_amd64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "8df580d2670fed8fa984aac0507099af8df275e665215f5c7a2ae3943893a553",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.12.2/golangci-lint-2.12.2-linux-amd64.tar.gz"],
)

http_archive(
    name = "golangci_lint_linux_arm64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "44cd40a8c76c86755375adfeea52cfd3533cb43d7bd647771e0ae065e166df3a",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.12.2/golangci-lint-2.12.2-linux-arm64.tar.gz"],
)

http_archive(
    name = "golangci_lint_darwin_amd64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "f6f06d94b6241521c53d15450c5209b028270bf966f842afb11c030c79f5bc16",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.12.2/golangci-lint-2.12.2-darwin-amd64.tar.gz"],
)

http_archive(
    name = "golangci_lint_darwin_arm64",
    build_file_content = """
exports_files(["golangci-lint"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint golangci-lint"],
    sha256 = "a9c54498731b3128f79e090be6110f3e5fffccc617b08142ed244d4126c73f29",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.12.2/golangci-lint-2.12.2-darwin-arm64.tar.gz"],
)

http_archive(
    name = "golangci_lint_windows_amd64",
    build_file_content = """
exports_files(["golangci-lint.exe"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint.exe golangci-lint.exe"],
    sha256 = "bd42e3ebc8cb4ececb86941983baaf1dc221bbb04d838e94ce63b49cc91e02bb",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.12.2/golangci-lint-2.12.2-windows-amd64.zip"],
)

http_archive(
    name = "golangci_lint_windows_arm64",
    build_file_content = """
exports_files(["golangci-lint.exe"])
""",
    patch_cmds = ["cp golangci-lint-*/golangci-lint.exe golangci-lint.exe"],
    sha256 = "947b9a5bf762d465710b376c156f0184abb2168378b0826af1899e0ee7183742",
    urls = ["https://github.com/golangci/golangci-lint/releases/download/v2.12.2/golangci-lint-2.12.2-windows-arm64.zip"],
)

# Register Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# Register Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_spf13_cobra", "com_github_spf13_viper", "com_github_stretchr_testify", "org_golang_x_sys", "org_uber_go_zap")

# Register distroless images and make them available
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:c83f022002fc917a92501a8c30c605efdad3010157ba2c8998a2cbf213299201",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

zstd = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
zstd.zstd()
use_repo(zstd, "zstd_toolchains")

register_toolchains("@zstd_toolchains//:all")
