load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = ["manager.go"],
    importpath = "github.com/TotallyNotRobots/apply-retention-policy/internal/file",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "file_test",
    srcs = ["manager_test.go"],
    embed = [":file"],
    deps = [
        "//pkg/logger",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
